correction vertical align

--- a/index.css
+++ b/index.css
@@ -15,6 +15,9 @@ body{
 	width: auto;
 	height:100px;
 	background: #CB0707;
+}
+
+#navi{
 	vertical-align: center;
 }
 
